testsuite/tests/rename/should_fail/DupTLKS.hs
{-# LANGUAGE TopLevelKindSignatures #-}

module DupTLKS where

import Data.Kind (Type)

data D

type D :: Type
type D :: Type
type D :: Type
